--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,9 @@
   ],
   "require": {
     "php": "^7.1.3",
-    "illuminate/config": "~5.6.0|~5.7.0",
-    "illuminate/database": "~5.6.0|~5.7.0",
-    "illuminate/support": "~5.6.0|~5.7.0",
+    "illuminate/config": "~5.6.0|~5.7.0|~5.8.0",
+    "illuminate/database": "~5.6.0|~5.7.0|~5.8.0",
+    "illuminate/support": "~5.6.0|~5.7.0|~5.8.0",
     "moontoast/math": "^1.1"
   },
   "autoload": {
@@ -32,9 +32,9 @@
     }
   },
   "require-dev": {
-    "phpunit/phpunit": "^7.0",
+    "phpunit/phpunit": "^7.5",
     "mockery/mockery": "^1.0",
-    "orchestra/testbench": "~3.6.0|~3.7.0"
+    "orchestra/testbench": "~3.6.0|~3.7.0|~3.8.0"
   },
   "scripts": {
     "test": "vendor/bin/phpunit"
