--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
   "require-dev": {
     "phpunit/phpunit": "^7.5",
     "mockery/mockery": "^1.0",
-    "orchestra/testbench": "^3.6"
+    "orchestra/testbench": "^3.5|^4.0"
   },
   "scripts": {
     "test": "vendor/bin/phpunit"
