--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,10 @@
     }
   ],
   "require": {
-    "php": "^7.1.3",
-    "illuminate/config": "^5.5|^6.0",
-    "illuminate/database": "^5.5|^6.0",
-    "illuminate/support": "^5.5|^6.0",
+    "php": "^7.2",
+    "illuminate/config": "^5.5|^6.0|^7.0",
+    "illuminate/database": "^5.5|^6.0|^7.0",
+    "illuminate/support": "^5.5|^6.0|^7.0",
     "moontoast/math": "^1.1"
   },
   "autoload": {
@@ -34,7 +34,7 @@
   "require-dev": {
     "phpunit/phpunit": "^7.5",
     "mockery/mockery": "^1.0",
-    "orchestra/testbench": "^3.5|^4.0"
+    "orchestra/testbench": "^3.5|^4.0|^5.0"
   },
   "scripts": {
     "test": "vendor/bin/phpunit"
