--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
     }
   },
   "require-dev": {
-    "phpunit/phpunit": "^7.5",
+    "phpunit/phpunit": "^6.5|^7.5",
     "mockery/mockery": "^1.0",
     "orchestra/testbench": "^3.5|^4.0|^5.0"
   },
