--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,10 @@
     }
   ],
   "require": {
-    "php": "^7.3",
-    "illuminate/config": "^5.8|^6.0|^7.0|^8.0",
-    "illuminate/database": "^5.8|^6.0|^7.0|^8.0",
-    "illuminate/support": "^5.8|^6.0|^7.0|^8.0",
+    "php": "^7.3|^8.0",
+    "illuminate/config": "^6.0|^7.0|^8.0",
+    "illuminate/database": "^6.0|^7.0|^8.0",
+    "illuminate/support": "^6.0|^7.0|^8.0",
     "moontoast/math": "^1.1"
   },
   "autoload": {
