--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,9 @@
   ],
   "require": {
     "php": "^7.3|^8.0",
-    "illuminate/config": "^6.0|^7.0|^8.0",
-    "illuminate/database": "^6.0|^7.30.4|^8.0",
-    "illuminate/support": "^6.0|^7.0|^8.0",
+    "illuminate/config": "^6.0|^7.0|^8.0|^9.0",
+    "illuminate/database": "^6.0|^7.30.4|^8.0|^9.0",
+    "illuminate/support": "^6.0|^7.0|^8.0|^9.0",
     "moontoast/math": "^1.1"
   },
   "autoload": {
@@ -34,7 +34,7 @@
   "require-dev": {
     "phpunit/phpunit": "^7.5|^8.4|^9.0",
     "mockery/mockery": "^1.0",
-    "orchestra/testbench": "^3.8|^4.0|^5.0|^6.0"
+    "orchestra/testbench": "^4.0|^5.0|^6.0|^7.0"
   },
   "scripts": {
     "test": "vendor/bin/phpunit"
