--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
       matrix:
         php: [7.4, 8.0, 8.1]
         laravel: [6.*, 7.*, 8.*, 9.*]
-        dependency-version: [prefer-lowest, prefer-stable]
+        dependency-version: [ stable, lowest ]
         include:
           - laravel: 9.*
             testbench: 7.*
