--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,18 +9,18 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        php: [7.4, 8.0, 8.1]
-        laravel: [6.*, 7.*, 8.*, 9.*]
+        php: [ 7.4, 8.0, 8.1 ]
+        laravel: [ ^6.0, ^7.0, ^8.0, ^9.0 ]
         dependency-version: [ stable, lowest ]
         include:
-          - laravel: 9.*
-            testbench: 7.*
-          - laravel: 8.*
-            testbench: 6.*
-          - laravel: 7.*
-            testbench: 5.*
-          - laravel: 6.*
-            testbench: 4.*
+          - laravel: ^9.0
+            testbench: ^7.0
+          - laravel: ^8.0
+            testbench: ^6.0
+          - laravel: ^7.0
+            testbench: ^5.0
+          - laravel: ^6.0
+            testbench: ^4.0
         exclude:
           - php: 7.4
             laravel: ^9.0
