--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,10 +7,9 @@ jobs:
     runs-on: ubuntu-latest
 
     strategy:
-      fail-fast: true
       matrix:
         php: [ 7.4, 8.0, 8.1 ]
-        laravel: [ ^6.0, ^7.0, ^8.0, ^9.0 ]
+        laravel: [  ^7.0, ^8.0, ^9.0 ]
         dependency-version: [ stable, lowest ]
         include:
           - laravel: ^9.0
@@ -19,8 +18,6 @@ jobs:
             testbench: ^6.0
           - laravel: ^7.0
             testbench: ^5.0
-          - laravel: ^6.0
-            testbench: ^4.0
         exclude:
           - php: 7.4
             laravel: ^9.0
