--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
     }
   },
   "require-dev": {
-    "phpunit/phpunit": "^9.5",
+    "phpunit/phpunit": "^8.5.8|^9.5.10",
     "mockery/mockery": "^1.0",
     "orchestra/testbench": "^5.0|^6.0|^7.0"
   },
