--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,8 @@ jobs:
         exclude:
           - php: 7.4
             laravel: ^9.0
+          - php: 8.1
+            laravel: ^7.0
           - laravel: ^9.0
             dependency-version: lowest
 
