--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,12 +9,12 @@ jobs:
     strategy:
       matrix:
         php: [ 7.4, 8.0, 8.1 ]
-        laravel: [ ^7.0, ^8.79, ^9.0 ]
+        laravel: [ ^7.0, ^8.0, ^9.0 ]
         dependency-version: [ stable, lowest ]
         include:
           - laravel: ^9.0
             testbench: ^7.0
-          - laravel: ^8.79
+          - laravel: ^8.0
             testbench: ^6.0
           - laravel: ^7.0
             testbench: ^5.0
@@ -22,7 +22,7 @@ jobs:
           - php: 7.4
             laravel: ^9.0
           - php: 8.1
-            laravel: ^7.0
+            laravel: [ ^7.0, ^8.0 ]
           - laravel: ^9.0
             dependency-version: lowest
 
