--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,6 @@ jobs:
         include:
           - laravel: ^9.0
             testbench: ^7.0
-            dependency-version: lowest
           - laravel: ^8.0
             testbench: ^6.0
           - laravel: ^7.0
@@ -23,7 +22,9 @@ jobs:
           - php: 7.4
             laravel: ^9.0
           - php: 8.1
-            laravel: ^7.0
+            laravel: [ ^7.0, ^8.0 ]
+          - laravel: ^9.0
+            dependency-version: lowest
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.dependency-version }}
 
