--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,9 @@ jobs:
           - php: 7.4
             laravel: ^9.0
           - php: 8.1
-            laravel: [ ^7.0, ^8.0 ]
+            laravel:
+              - ^7.0
+              - ^8.0
           - laravel: ^9.0
             dependency-version: lowest
 
