--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,9 +23,8 @@ jobs:
             laravel: ^9.0
           - php: 8.1
             laravel: ^7.0
-          - laravel: ^8.0
-            - php: 8.1
-              dependency-version: lowest
+          - php: 8.1
+            laravel: ^8.0
           - laravel: ^9.0
             dependency-version: lowest
 
