--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,10 @@
     }
   ],
   "require": {
-    "php": "^7.3|^8.0",
-    "illuminate/config": "^6.0|^7.0|^8.0",
-    "illuminate/database": "^6.0|^7.30.4|^8.0",
-    "illuminate/support": "^6.0|^7.0|^8.0",
+    "php": "^7.4|^8.0",
+    "illuminate/config": "^7.0|^8.0|^9.0",
+    "illuminate/database": "^7.30.4|^8.0|^9.0",
+    "illuminate/support": "^7.0|^8.0|^9.0",
     "moontoast/math": "^1.1"
   },
   "autoload": {
@@ -32,11 +32,13 @@
     }
   },
   "require-dev": {
-    "phpunit/phpunit": "^7.5|^8.4|^9.0",
+    "phpunit/phpunit": "^8.5.8|^9.5.10",
     "mockery/mockery": "^1.0",
-    "orchestra/testbench": "^3.8|^4.0|^5.0|^6.0"
+    "orchestra/testbench": "^5.0|^6.0|^7.0"
   },
   "scripts": {
     "test": "vendor/bin/phpunit"
-  }
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true
 }
