--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,21 +8,23 @@ jobs:
 
     strategy:
       matrix:
-        php: [ 7.4, 8.0, 8.1 ]
-        laravel: [ ^7.0, ^8.0, ^9.0 ]
-        dependency-version: [ stable, lowest ]
+        php: [7.4, 8.0, 8.1, 8.2]
+        laravel: [^8.0, ^9.0, ^10.0]
+        dependency-version: [stable, lowest]
         include:
+          - laravel: ^10.0
+            testbench: ^8.0
           - laravel: ^9.0
             testbench: ^7.0
           - laravel: ^8.0
             testbench: ^6.0
-          - laravel: ^7.0
-            testbench: ^5.0
         exclude:
           - php: 7.4
             laravel: ^9.0
-          - php: 8.1
-            laravel: ^7.0
+          - php: 7.4
+            laravel: ^10.0
+          - php: 8.0
+            laravel: ^10.0
           - php: 8.1
             laravel: ^8.0
           - laravel: ^9.0
