--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,10 @@
   ],
   "require": {
     "php": "^7.4|^8.0",
-    "illuminate/config": "^7.0|^8.0|^9.0",
-    "illuminate/database": "^7.30.4|^8.40.0|^9.0",
-    "illuminate/support": "^7.0|^8.0|^9.0",
-    "moontoast/math": "^1.1"
+    "illuminate/config": "^8.0|^9.0|^10.0",
+    "illuminate/database": "^8.40.0|^9.0|^10.0",
+    "illuminate/support": "^8.0|^9.0|^10.0",
+    "ramsey/uuid": "^4.0"
   },
   "autoload": {
     "psr-4": {
@@ -34,7 +34,7 @@
   "require-dev": {
     "phpunit/phpunit": "^8.5.8|^9.5.10",
     "mockery/mockery": "^1.0",
-    "orchestra/testbench": "^5.0|^6.0|^7.0"
+    "orchestra/testbench": "^6.0|^7.0|^8.0"
   },
   "scripts": {
     "test": "vendor/bin/phpunit"
