--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       matrix:
         php: [7.4, 8.0, 8.1, 8.2]
-        laravel: [^8.79, ^9.0, ^10.0]
+        laravel: [^8.0, ^9.0, ^10.0]
         dependency-version: [stable, lowest]
         include:
           - laravel: ^10.0
@@ -26,6 +26,8 @@ jobs:
           - php: 8.0
             laravel: ^10.0
           - php: 8.1
+            laravel: ^8.0
+          - php: 8.2
             laravel: ^8.0
           - laravel: ^9.0
             dependency-version: lowest
