--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,10 @@
     }
   ],
   "require": {
-    "php": "^7.4|^8.0",
-    "illuminate/config": "^8.0|^9.0|^10.0",
-    "illuminate/database": "^8.40.0|^9.0|^10.0",
-    "illuminate/support": "^8.0|^9.0|^10.0",
+    "php": "^8.1",
+    "illuminate/config": "^9.0|^10.0|^11.0",
+    "illuminate/database": "^9.0|^10.0|^11.0",
+    "illuminate/support": "^9.0|^10.0|^11.0",
     "ramsey/uuid": "^4.0"
   },
   "autoload": {
@@ -32,9 +32,9 @@
     }
   },
   "require-dev": {
-    "phpunit/phpunit": "^8.5.8|^9.5.10",
+    "phpunit/phpunit": "^9.5|^10.5",
     "mockery/mockery": "^1.0",
-    "orchestra/testbench": "^6.0|^7.0|^8.0"
+    "orchestra/testbench": "^7.0|^8.0|^9.0"
   },
   "scripts": {
     "test": "vendor/bin/phpunit"
