--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,8 @@ jobs:
         exclude:
           - php: 8.1
             laravel: ^11.0
+          - php: 8.2
+            laravel: ^9.0
           - php: 8.3
             laravel: ^9.0
 
