--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,9 @@
   ],
   "require": {
     "php": "^8.1",
-    "illuminate/config": "^9.0|^10.0|^11.0",
-    "illuminate/database": "^9.0|^10.0|^11.0",
-    "illuminate/support": "^9.0|^10.0|^11.0",
+    "illuminate/config": "^9.0|^10.0|^11.0|^12.0",
+    "illuminate/database": "^9.0|^10.0|^11.0|^12.0",
+    "illuminate/support": "^9.0|^10.0|^11.0|^12.0",
     "ramsey/uuid": "^4.0"
   },
   "autoload": {
@@ -32,9 +32,9 @@
     }
   },
   "require-dev": {
-    "phpunit/phpunit": "^9.5|^10.5",
+    "phpunit/phpunit": "^9.5|^10.5|^11.0",
     "mockery/mockery": "^1.0",
-    "orchestra/testbench": "^7.0|^8.0|^9.0"
+    "orchestra/testbench": "^7.0|^8.0|^9.0|^10.0"
   },
   "scripts": {
     "test": "vendor/bin/phpunit"
